# cbuild2cmake

./: .codeclimate.yml  .golangci.yml  .goreleaser.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPING.md  LICENSE  README.md  go.mod  go.sum  makefile  third_party_licenses.md
.github/: dependabot.yml  lychee.toml  markdownlint.jsonc
.github/ISSUE_TEMPLATE/: bug.yaml
.github/workflows/: build.yml  ci.yml  codeql.yml  dependency-review.yml  global.yml  markdown.yml  release.yml  scorecard.yml  test.yml  tpip-check.yml  update-workflows.yml
.qlty/: qlty.toml
cmd/cbuild2cmake/: main.go  version.go
cmd/cbuild2cmake/commands/: root.go  root_test.go
pkg/inittest/: inittest.go
pkg/maker/: buildcontent.go  buildcontent_test.go  contextlists.go  contextlists_test.go  maker.go  maker_test.go  parser.go  parser_test.go  superlists.go  toolchain.go  toolchain_test.go  west.go  west_test.go  zephyr.go  zephyr_test.go
pkg/utils/: utils.go  utils_test.go
scripts/: check_copyright_notice.py  release
scripts/template/: third_party_licenses.md.template
test/data/etc/: GCC.10.3.1.cmake
test/data/generic/: contextName0.cbuild.yml  imageOnly.cbuild-idx.yml  solutionName0.cbuild-idx.yml  solutionName0.cbuild-set.yml  solutionName1.cbuild-idx.yml  solutionName2.cbuild-idx.yml  solutionName3.cbuild-idx.yml  solutionName4.cbuild-idx.yml
test/data/generic/project/subfolder/: contextName.cbuild.yml
test/data/minimal/: minimal.AC6+ARMCM0.cbuild.yml  minimal.cbuild-idx.yml
test/data/solutions/abstractions/: solution.cbuild-idx.yml  solution.csolution.yml
test/data/solutions/abstractions/project/: main.c  optimize_size.c  optimize_speed.c  project.GCC+ARMCM0.cbuild.yml  project.cproject.yml
test/data/solutions/abstractions/ref/project.GCC+ARMCM0/: CMakeLists.txt  components.cmake  groups.cmake
test/data/solutions/blanks/: solution.cbuild-idx.yml  solution.csolution.yml
test/data/solutions/blanks/project/: project X.AC6 X+ARMCM0 X.cbuild.yml  project X.cproject.yml
test/data/solutions/blanks/ref/: CMakeLists.txt
test/data/solutions/blanks/ref/project X.AC6 X+ARMCM0 X/: CMakeLists.txt
test/data/solutions/build-asm/: solution.csolution.yml
test/data/solutions/build-asm/project/: project.AC6+ARMCM0.cbuild.yml  project.CLANG+ARMCM0.cbuild.yml  project.GCC+ARMCM0.cbuild.yml  project.IAR+ARMCM0.cbuild.yml
test/data/solutions/build-asm/project/AC6/: Auto.s  GnuSyntax.s
test/data/solutions/build-asm/project/GCC/: PreProcessed.S
test/data/solutions/build-asm/ref/project.AC6+ARMCM0/: CMakeLists.txt  components.cmake  groups.cmake
test/data/solutions/build-asm/ref/project.CLANG+ARMCM0/: CMakeLists.txt  groups.cmake
test/data/solutions/build-c/: solution.cbuild-idx.yml  solution.csolution.yml
test/data/solutions/build-c/project/: project.AC6+ARMCM0.cbuild.yml  project.CLANG+ARMCM0.cbuild.yml  project.GCC+ARMCM0.cbuild.yml  project.IAR+ARMCM0.cbuild.yml
test/data/solutions/build-cpp/: solution.cbuild-idx.yml  solution.csolution.yml
test/data/solutions/build-cpp/project/: project.AC6+ARMCM55.cbuild.yml  project.CLANG+ARMCM55.cbuild.yml  project.GCC+ARMCM55.cbuild.yml  project.IAR+ARMCM55.cbuild.yml
test/data/solutions/build-cpp/ref/project.AC6+ARMCM55/: CMakeLists.txt  components.cmake
test/data/solutions/build-cpp/ref/project.GCC+ARMCM55/: CMakeLists.txt  groups.cmake
test/data/solutions/build-set/: solution.cbuild-idx.yml  solution.cbuild-set.yml  solution.csolution.yml
test/data/solutions/build-set/project/: project.Release+ARMCM0.cbuild.yml
test/data/solutions/build-set/ref/: CMakeLists.txt
test/data/solutions/executes/: solution.cbuild-idx.yml  solution.csolution.yml
test/data/solutions/executes/project/: project.Debug+ARMCM0.cbuild.yml  project.Release+ARMCM0.cbuild.yml
test/data/solutions/executes/ref/: CMakeLists.txt
test/data/solutions/image-only/: solution.cbuild-idx.yml  solution.csolution.yml
test/data/solutions/image-only/images/: image1.elf
test/data/solutions/image-only/ref/: CMakeLists.txt
test/data/solutions/include-define/: solution.cbuild-idx.yml  solution.csolution.yml
test/data/solutions/include-define/project/: project.AC6+ARMCM0.cbuild.yml  project.CLANG+ARMCM0.cbuild.yml  project.GCC+ARMCM0.cbuild.yml  project.IAR+ARMCM0.cbuild.yml  project.cproject.yml
test/data/solutions/language-scope/project/: project.AC6+ARMCM0.cbuild.yml  project.CLANG+ARMCM0.cbuild.yml  project.GCC+ARMCM0.cbuild.yml  project.IAR+ARMCM0.cbuild.yml
test/data/solutions/library-rtos/: solution.cbuild-idx.yml  solution.csolution.yml
test/data/solutions/library-rtos/project/: project.AC6+ARMCM0.cbuild.yml  project.CLANG+ARMCM0.cbuild.yml  project.GCC+ARMCM0.cbuild.yml  project.IAR+ARMCM0.cbuild.yml
test/data/solutions/link-lib/: solution.cbuild-idx.yml  solution.csolution.yml
test/data/solutions/link-lib/project/: project.cproject.yml
test/data/solutions/linker-pre-processing/: solution.cbuild-idx.yml  solution.csolution.yml
test/data/solutions/linker-pre-processing/project/: project.AC6+ARMCM0.cbuild.yml  project.CLANG+ARMCM0.cbuild.yml  project.GCC+ARMCM0.cbuild.yml  project.IAR+ARMCM0.cbuild.yml
test/data/solutions/linker-pre-processing/ref/project.GCC+ARMCM0/: CMakeLists.txt
test/data/solutions/pre-include/: solution.cbuild-idx.yml  solution.csolution.yml
test/data/solutions/pre-include-oot/: project.AC6+ARMCM0.cbuild.yml  project.CLANG+ARMCM0.cbuild.yml  project.GCC+ARMCM0.cbuild.yml  project.IAR+ARMCM0.cbuild.yml  solution.cbuild-idx.yml
test/data/solutions/pre-include-oot/ref/: CMakeLists.txt
test/data/solutions/pre-include/project/: project.AC6+ARMCM0.cbuild.yml  project.CLANG+ARMCM0.cbuild.yml  project.GCC+ARMCM0.cbuild.yml  project.IAR+ARMCM0.cbuild.yml
test/data/solutions/pre-include/ref/project.AC6+ARMCM0/: CMakeLists.txt  components.cmake
test/data/solutions/pre-include/ref/project.GCC+ARMCM0/: CMakeLists.txt  components.cmake
test/data/solutions/west/: solution.csolution.yml
test/data/solutions/west/ref/: CMakeLists.txt
test/data/solutions/west/ref/core0.Debug+CM0/: CMakeLists.txt
(+76 files in other folders)
